alignement and picture links issue

--- a/public/css/include/common.less
+++ b/public/css/include/common.less
@@ -295,7 +295,7 @@ body {
   .modal-header {
     background: url(/SVGs/Warranty.svg) no-repeat scroll center 50px transparent;
     border-bottom: none;
-    padding: 15px 15px 0px 0px;
+    padding: 15px 15px 0px 15px;
     &>p {
       padding-top: 100px;
       font-size: 36px;
@@ -328,7 +328,7 @@ body {
   .modal-header {
     background: url(/SVGs/mail.svg) no-repeat scroll center 50px transparent;
     border-bottom: none;
-    padding: 15px 15px 0px 0px;
+    padding: 15px 15px 0px 15px;
     &>p {
       padding-top: 100px;
       font-size: 36px;
